--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,21 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: hello-deployment
   labels:
-    app: nginx
+    app: hello
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
-      app: nginx
+      app: hello
   template:
     metadata:
       labels:
-        app: nginx
+        app: hello
     spec:
       containers:
-      - name: nginx
-        image: nginx:1.14.2
+      - name: hello
+        image: raniasaleh/hello:latest
+        imagePullPolicy: Always
         ports:
-        - containerPort: 80
+        - containerPort: 5000
+         name: hello
